<resources>
    <string name="app_name">COVID Check-In: Restaurant Edition</string>
    <string name="startscreen_fragment_header">Geben Sie Bitte Ihre Kontakt Daten Ein</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="strasse">Straße</string>
    <string name="hausnummer">Hausnummer</string>
    <string name="stadt">Stadt</string>
    <string name="plz">PLZ</string>
    <string name="telefone">Telefonnummer</string>
    <string name="datenschutzerklaerung"><![CDATA[Ich habe die <font color=\'#cc0029\'>Datenschutzerklärung</font> gelesen und erkläre mich damit einverstanden, dass meine Daten im Rahmen dieses Projekts verwendet werden können.]]></string>
</resources>
