<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_form_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uni.hannover.hci.mi.team6.covidcheckin.restaurantContactForm.RestaurantContactFormActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:text="@string/startscreen_fragment_header"
        android:textColor="@color/Black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/localsaving_info"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText_resturantname"
        android:layout_width="315dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/restaurant_name"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText_OwnerVorname"
        android:layout_width="315dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/vorname"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_resturantname" />

    <EditText
        android:id="@+id/editText_OwnerNachname"
        android:layout_width="315dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/nachname"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_OwnerVorname" />

    <EditText
        android:id="@+id/editText_telefone"
        android:layout_width="315dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_stadt" />

    <EditText
        android:id="@+id/editText_strasse"
        android:layout_width="230dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/strasse"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_hausnummer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_OwnerNachname" />

    <EditText
        android:id="@+id/editText_stadt"
        android:layout_width="230dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/stadt"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_plz"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_strasse" />

    <EditText
        android:id="@+id/editText_plz"
        android:layout_width="78dp"
        android:layout_height="31dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/plz"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText_stadt"
        app:layout_constraintTop_toBottomOf="@+id/editText_hausnummer" />

    <EditText
        android:id="@+id/editText_hausnummer"
        android:layout_width="78dp"
        android:layout_height="31dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hausnummer"
        android:inputType="textPersonName"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText_strasse"
        app:layout_constraintTop_toBottomOf="@+id/editText_OwnerNachname" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="325dp"
        android:layout_height="81dp"
        android:layout_marginTop="12dp"
        android:text="@string/datenschutzerklaerung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_telefone" />

    <Button
        android:id="@+id/weiter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/focusedbutton"
        android:text="@string/weiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.256" />

</androidx.constraintlayout.widget.ConstraintLayout>